--- a/client/src/pages/loginPage/LoginPage.module.css
+++ b/client/src/pages/loginPage/LoginPage.module.css
@@ -34,9 +34,18 @@ button {
 button:hover {
     background-color: #1f1f1f;
 }
+button:active {
+    background-color: #303030;
+}
 
 h1 {
     color: #fafafa;
     font-size: 32px;
     margin: 0px 0px 32px 0px;
+}
+
+a {
+    font-size: 16px;
+    color: #fafafa;
+    text-decoration-color: #cacaca;
 }
