--- a/client/src/pages/registerPage/RegisterPage.module.css
+++ b/client/src/pages/registerPage/RegisterPage.module.css
@@ -28,15 +28,24 @@ button {
     background-color: #181818;
     color: #fafafa;
     font-size: 16px;
-    margin-top: 8px;
+    margin: 8px 0px 16px 0px;
     transition: background-color, 0.1s;
 }
 button:hover {
     background-color: #1f1f1f;
+}
+button:active {
+    background-color: #303030;
 }
 
 h1 {
     color: #fafafa;
     font-size: 32px;
     margin: 0px 0px 32px 0px;
+}
+
+a {
+    font-size: 16px;
+    color: #fafafa;
+    text-decoration-color: #cacaca;
 }
