--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,3 +4,62 @@
   padding: 2rem;
   text-align: center;
 }
+
+form {
+  width: 400px;
+  padding: 32px 24px;
+  margin: auto;
+  border-radius: 12px;
+}
+
+form input {
+  width: 100%;
+  display: block;
+  box-sizing: border-box;
+  margin: 0px;
+  margin: 16px 0px;
+  padding: 12px 12px;
+  border-radius: 4px;
+  border: none;
+  font-size: 16px;
+  color: #181818;
+  background-color: #fafafa;
+  outline-width: 1px;
+  outline-color: #b6b6b6;
+}
+
+button {
+  width: 100%;
+  border: none;
+  border-radius: 4px;
+  padding: 12px 0px;
+  background-color: #181818;
+  color: #fafafa;
+  font-size: 16px;
+  margin: 16px 0px;
+  transition: background-color, 0.1s;
+}
+button:hover {
+  background-color: #242424;
+}
+button:active {
+  background-color: #303030;
+}
+h1 {
+  color: #181818 !important;
+  font-size: 32px !important;
+  padding: 0px 0px 8px 0px !important;
+}
+
+a {
+  font-size: 16px;
+  color: #181818 !important;
+  text-decoration-color: #1d1d1d;
+}
+
+.error {
+  color: #cf2929;
+  font-weight: 500;
+  margin: 8px 0px 0px 0px;
+  text-align: left;
+}
