--- a/client/src/pages/loginPage/LoginPage.module.css
+++ b/client/src/pages/loginPage/LoginPage.module.css
@@ -1,50 +1,6 @@
-form {
-    width: 400px;
-    padding: 32px 24px;
-    margin: auto;
-    border-radius: 12px;
-}
-
-form input {
-    width: 100%;
-    display: block;
-    box-sizing: border-box;
-    margin-bottom: 24px;
-    padding: 12px 12px;
-    border-radius: 4px;
-    border: none;
-    font-size: 16px;
-    color: #181818;
-    background-color: #fafafa;
-    outline-width: 1px;
-    outline-color: #b6b6b6;
-}
-
-button {
-    width: 100%;
-    border: none;
-    border-radius: 4px;
-    padding: 12px 0px;
-    background-color: #181818;
-    color: #fafafa;
-    font-size: 16px;
-    margin-top: 8px;
-    transition: background-color, 0.1s;
-}
-button:hover {
-    background-color: #ebebeb;
-}
-button:active {
-    background-color: #e2e2e2;
-}
-h1 {
-    color: #181818 !important;
-    font-size: 32px !important;
-    margin: 0px 0px 32px 0px !important;
-}
-
-a {
-    font-size: 16px;
-    color: #181818 !important;
-    text-decoration-color: #1d1d1d;
+.error {
+    color: #cf2929;
+    font-weight: 500;
+    margin: 8px 0px 0px 0px;
+    text-align: left;
 }
